Bilverkstad tar emot bilar utan att krasha programmet.